<resources>
    <string name="organiztion_name">The Organizing Academy</string>
    <string name="app_name">TheOrgApp</string>

    <string name="Organizing">Organizing and Productivity Solution</string>
    <string name="LogInButton">Login</string>
    <string name="Or">Or</string>
    <string name="SignUpButton">Sign up</string>
    <string name="contact_form">Contact Form</string>
    <string name="how_can_help">How can we Help You?</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email Address</string>
    <string name="message">Message ...</string>
    <string name="send">Send</string>
    <string name="LoginText">Email</string>
    <string name="email">Email</string>
    <string name="PasswordText">password</string>
    <string name="password">Password</string>
    <string name="LoginButton1">login</string>
    <string name="connect">Connect</string>
    <string name="notification">Notifications</string>
    <string name="clubs">Clubs</string>

    <string name="community">Community</string>
    <string name="transactions">Transactions</string>
    <string name="reward">Rewards</string>
    <string name="account_history">View Your Account History</string>
    <string name="support">Support</string>
    <string name="features">Features</string>
    <string name="name">Name</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="login_again">Login</string>


    <string name="version_info">Version: October, 2019</string>
    <string name="home_page_title">Home</string>
    <string name="group_message">BlueSky - Algonquin College</string>
    <string name="course_message">Advisor Professor: Reginald Dyer</string>
    <string name="home_main_name_jj">Home</string>
    <string name="connect_main_name_jj">Connect</string>
    <string name="features_main_name_jj">Features</string>
    <string name="profile_main_name_jj">Profile</string>
    <string name="button1_hp_jj_name">Manage Projects</string>
    <string name="button2_hp_jj_name">Master Your Craft</string>
    <string name="button3_hp_jj_name">Submit An Article</string>
    <string name="button4_hp_jj_name">Share Your Insights</string>
    <string name="button5_hp_jj_name">Showcase Your Service</string>
    <string name="button6_hp_jj_name">Contact Support</string>
    <string name="heip_menu_item_name">Help</string>
    <string name="about_menu_item_name">About</string>
    <string name="log_out_menu_item_name">Log Out</string>
    <string name="log_out_msg">Are you sure to Log Out</string>
    <string name="positive_ok">Ok</string>

    <string name="home_page_help_title">Home Page Help</string>
    <string name="home_page_help_message">Help message for usage: Home Page</string>

    <string name="connect_help_title">Connect Help</string>
    <string name="connect_help_message">Help message for usage: Connect</string>

    <string name="features_help_title">Features Help</string>
    <string name="features_help_message">Help message for usage: Features</string>

    <string name="profile_help_title">Profile Help</string>
    <string name="profile_help_message">Help message for usage: Profile</string>
    <string name="profile_photo_description">Profile Photo</string>
    <string name="profile_first_name">Jesmine</string>
    <string name="profile_last_name">Onyeukwu</string>
    <string name="profile_organizing_type">Orginizing Guru</string>
    <string name="profile_city">Ottawa</string>
    <string name="profile_province">Ontario</string>
    <string name="profile_country">Canada</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="conversations">Conversations</string>
    <string name="contacts">Contacts</string>

    <string name="project_dashboard_title">Project Dashboard</string>

    <string name="project_dashboard_phase1_title">Project Dashboard \nPhase 1: Project Onboarding</string>
    <string name="dash_board_p1_project_name_title">Project Name: </string>
    <string name="dash_board_p1_project_name">The First Project</string>
    <string name="dash_board_p1_descriptiion_title">Brief Description: </string>
    <string name="dash_board_p1_descriptiion">It’s time! Get ready to serve your customers</string>
    <string name="dash_board_p1_client_title">Client: </string>
    <string name="dash_board_p1_add_client_button">Add / Invite Client</string>
    <string name="dash_board_p1_team_member_title">Team Member(s): </string>
    <string name="dash_board_p1_add_team_member_button">Add Team Member</string>
    <string name="dash_board_p1_note_title">Notes, Links and Files: </string>
    <string name="dash_board_p1_add_note_button">Add Notes / Links / Files</string>

    <string name="project_dashboard_phase2_title">Project Dashboard \nPhase 2: Project Proposal</string>
    <string name="dash_board_p2_pre_assessment_title">Pre-Assessment\nProposal: </string>
    <string name="dash_board_p2_post_assessment_title">Post-Assessment\nProposal: </string>
    <string name="dash_board_p2_project_contract_a_title">Project Contract A: </string>
    <string name="dash_board_p2_create_proposal_button">Create Proposal</string>
    <string name="dash_board_p2_create_contract_button">Create Contract</string>
    <string name="dash_board_p2_download_template_button">Download Template</string>

    <string name="project_dashboard_phase3_title">Project Dashboard \nPhase 3: Project Assessment</string>
    <string name="dash_board_p3_assessment_title">Project Assessment: </string>
    <string name="dash_board_p3_assessment">Understand the customer’s needs, challenges and goals.</string>

    <string name="project_dashboard_phase4_title">Project Dashboard \nPhase 4: Project Estimation</string>
    <string name="dash_board_p4_project_estimation_title">Project Estimation: </string>
    <string name="dash_board_p4_project_type_title">Project Type: </string>
    <string name="p4_project_type_prompt">Choose Project Type</string>

    <string-array name="p4_project_type">
        <item>Residential Organizing</item>
        <item>Business Organizing</item>
        <item>Commercial Organizing</item>
        <item>Social Organizing</item>
        <item>Lifestyle Organizing</item>
        <item>Workplace Consulting</item>
        <item>Organizing Education</item>
        <item>Add other</item>
    </string-array>

    <string name="project_dashboard_phase5_title">Project Dashboard \nPhase 5: Project Approval</string>
    <string name="dash_board_p5_project_approval_title">Project Approval: </string>
    <string name="dash_board_p5_send_quote_button">Send Quote</string>
    <string name="dash_board_p5_send_invoice_button">Send Invoice</string>
    <string name="dash_board_p5_send_contract_b_button">Send Contract B</string>

    <string name="project_dashboard_phase6_title">Project Dashboard \nPhase 6: Project Planning</string>
    <string name="dash_board_p6_planning_title">Project Planning: </string>
    <string name="dash_board_p6_client_actions">Clients Action Steps: </string>
    <string name="dash_board_p6_company_actions">Company’s Action Steps: </string>

    <string name="project_dashboard_phase7_title">Project Dashboard \nPhase 7: Project Execution</string>
    <string name="dash_board_p7_execution_title">Project Execution: </string>
    <string name="dash_board_p7_client_actions">Clients Action Steps: </string>
    <string name="dash_board_p7_company_actions">Company’s Action Steps: </string>

    <string name="project_dashboard_phase8_title">Project Dashboard \nPhase 8: Project Review</string>
    <string name="dash_board_p8_review_title">Project Review: </string>
    <string name="dash_board_p8_feedback_survey">Feedback Survey: </string>

    <string name="back_to_dashboard">Back to Project Main Dashboard</string>
    <string name="project_dashboard_past_p_title">Past Projects \nList\n\nComing Soon.</string>

    <string name="guru_profile">Profile</string>
    <string name="guruprofile_profile">Profile</string>
    <string name="guruprofile_name">Jesmine Onyeukwu</string>
    <string name="guruprofile_guru">Organizing Guru</string>
    <string name="guruprofile_location">Ottawa, Canada</string>
    <string name="guruprofile_logout">LOG OUT</string>
    <string-array name="searvices">

    <item>Service 1</item>

    <item>Service 2</item>

    <item>Service 3</item>
    </string-array>
        <string-array name="project_type">

        <item>Type 1</item>

        <item>Type 2</item>

        <item>Type 3</item>

    </string-array>

    <string name="fan_profile">Profile</string>
    <string name="fanprofile_name">Riley Moss</string>
    <string name="fanprofile_guru">Organizing Fan</string>
    <string name="fanprofile_location">Toronto, Canada</string>

    <string name="resource_title">Resources</string>
    <string name="resource_documentguidelines">DOCUMENT CATEGORIZATION/RETENTION GUIDE</string>
    <string name="resource_documentmaintenanceguide">Document Maintenance Guide</string>
    <string name="resource_worksheet">3R De-cluttering Strategy Worksheet</string>
    <string name="orginising_customer_waits">Your Orginising Customer Awaits</string>
    <string name="find_local_club">Find A Local Club</string>
    <string name="join_online_community">Join The Online Community</string>
    <string name="current_point_balance">Your Current Point Balance\nas of 12/Nov at 12:00</string>
    <string name="expert_of_week">Expert of the week</string>
    <string name="insight_of_week">Insight of the week</string>
    <string name="prohect_of_week">Project of the week</string>
    <string name="expert">Expert</string>
    <string name="project">Project</string>
    <string name="insight">Insight</string>
    <string name="marketplace">MarketPlace</string>

    <string name="mainprofile_edit">Edit Profile</string>
    <string name="mainprofile_location">Location</string>
    <string name="mainprofile_name">Name</string>
    <string name="registered_as">Register as: </string>
    <string name="professional_register">Professional </string>
    <string name="customer_register">Customer </string>
    <string name="register_button">Register</string>
    <string name="save_button">Save</string>

    <string name="buttonspin">Spin</string>

</resources>
