<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/home_main_item_jj"
        android:orderInCategory="50"
        android:icon="@drawable/toa_48"
        app:showAsAction="always"
        android:title="@string/home_main_name_jj" >
    </item>
    <item
        android:id="@+id/connect_main_item_jj"
        android:orderInCategory="100"
        android:icon="@drawable/connect_48"
        app:showAsAction="always"
        android:title="@string/connect_main_name_jj" >
    </item>
    <item
        android:id="@+id/features_main_item_jj"
        android:orderInCategory="150"
        android:icon="@drawable/features_48"
        app:showAsAction="always"
        android:title="@string/features_main_name_jj" >
    </item>
    <item
        android:id="@+id/profile_main_item_jj"
        android:orderInCategory="200"
        android:icon="@drawable/profile_48"
        app:showAsAction="always"
        android:title="@string/profile_main_name_jj" >
    </item>
    <item
        android:id="@+id/help_menu_item"
        android:orderInCategory="600"
        app:showAsAction="never"
        android:title="@string/heip_menu_item_name" >
    </item>
    <item
        android:id="@+id/about_menu_item"
        android:orderInCategory="650"
        app:showAsAction="never"
        android:title="@string/about_menu_item_name" >
    </item>
    <item
        android:id="@+id/log_out_menu_item"
        android:orderInCategory="700"
        app:showAsAction="never"
        android:title="@string/log_out_menu_item_name" >
    </item>

</menu>