<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mainprofile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/mainprofile_edit"/>

        <ImageView
            android:id="@+id/imageUpload"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <EditText
            android:id="@+id/mainprofile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mainprofile_name"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/mainprofile_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mainprofile_location"
            android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/registered_as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registered_as"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:checkedButton="1">
            <CheckBox
                android:id="@+id/professional_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professional_register"
                android:onClick="onCheckboxClicked"/>
            <CheckBox
                android:id="@+id/customer_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_register"
                android:onClick="onCheckboxClicked"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/mainprofile_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/save_button"/>


</LinearLayout>
