<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DashboardPhase5Activity">

    <TextView
        android:id="@+id/dash_board_p_title_jj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/project_dashboard_phase5_title"
        android:textAlignment="center"
        android:textColor="#B4950D"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dash_board_p5_project_approval_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dash_board_p_title_jj"
        android:textSize="18sp"
        android:text="@string/dash_board_p5_project_approval_title" />
    <Button
        android:id="@+id/dash_board_p5_button_quote_send_jj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dash_board_p5_project_approval_title"
        android:layout_toLeftOf="@id/dash_board_p5_button_invoice_sent_jj"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:text="@string/dash_board_p5_send_quote_button" />
    <Button
        android:id="@+id/dash_board_p5_button_invoice_sent_jj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dash_board_p5_project_approval_title"
        android:layout_toLeftOf="@id/dash_board_p5_button_contract_b_send_jj"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:text="@string/dash_board_p5_send_invoice_button" />
    <Button
        android:id="@+id/dash_board_p5_button_contract_b_send_jj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dash_board_p5_project_approval_title"
        android:layout_alignParentEnd="true"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:text="@string/dash_board_p5_send_contract_b_button" />


    <Button
        android:id="@+id/imageButton_edit_profile_pdb_jj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/pdb_b_button_edp"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <Button
        android:id="@+id/imageButton_home_page_pdb_jj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:drawableBottom="@drawable/toa_48"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <Button
        android:id="@+id/imageButton_view_past_project_pdb_jj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:drawableEnd="@drawable/pdb_b_button_vpp"
        android:textAllCaps="false"
        android:textSize="12sp" />

</RelativeLayout>
